create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -2480,11 +2480,47 @@ body {
   background-image: url("../../../assets/images/3459803e2106c0b-1000x260.jpg");
 }
 .cid-rm9M4xeWLf {
-  padding-top: 60px;
-  padding-bottom: 45px;
+  padding-top: 15px;
+  padding-bottom: 0px;
   background-color: #ffffff;
 }
 .cid-rm9M4xeWLf .mbr-section-subtitle {
+  color: #232323;
+  text-align: left;
+}
+.cid-roLrvTFzot {
+  padding-top: 30px;
+  padding-bottom: 30px;
+  background-color: #ffffff;
+}
+.cid-roLrvTFzot .line {
+  background-color: #149dcc;
+  color: #149dcc;
+  align: center;
+  height: 2px;
+  margin: 0 auto;
+}
+.cid-roLrvTFzot .section-text {
+  padding: 2rem 0;
+  text-align: left;
+}
+.cid-roLrvTFzot .inner-container {
+  margin: 0 auto;
+}
+@media (max-width: 768px) {
+  .cid-roLrvTFzot .inner-container {
+    width: 100% !important;
+  }
+}
+.cid-roLrvTFzot .section-text DIV {
+  text-align: left;
+}
+.cid-roLsiQek0L {
+  padding-top: 15px;
+  padding-bottom: 0px;
+  background-color: #ffffff;
+}
+.cid-roLsiQek0L .mbr-section-subtitle {
   color: #767676;
 }
 .cid-rm9MkNWqXw {
@@ -2510,13 +2546,17 @@ body {
     width: 100% !important;
   }
 }
+.cid-rm9MkNWqXw .section-text DIV {
+  text-align: left;
+}
 .cid-rm9MUw0riy {
   padding-top: 90px;
   padding-bottom: 90px;
   background-color: #f9f9f9;
 }
 .cid-rm9MUw0riy .mbr-section-subtitle {
-  color: #767676;
+  color: #232323;
+  text-align: left;
 }
 .cid-rm9MUw0riy .container-table {
   margin: 0 auto;
@@ -2589,6 +2629,13 @@ body {
     margin-left: 0 !important;
   }
 }
+.cid-rm9MUw0riy .body-item {
+  text-align: center;
+  color: #232323;
+}
+.cid-rm9MUw0riy .head-item {
+  text-align: center;
+}
 .cid-rm9MmwVoLS {
   padding-top: 30px;
   padding-bottom: 30px;
@@ -2623,102 +2670,131 @@ body {
 }
 .cid-rm9MlR1EA1 .mbr-text P {
   text-align: left;
+  color: #232323;
 }
-.cid-rm9MogCJMN {
-  padding-top: 60px;
-  padding-bottom: 60px;
+.cid-roLwph3Z7r {
+  padding-top: 90px;
+  padding-bottom: 90px;
   background-color: #ffffff;
 }
-.cid-rm9MogCJMN .mbr-text,
-.cid-rm9MogCJMN blockquote {
+.cid-roLwph3Z7r h2 {
+  text-align: left;
+}
+.cid-roLwph3Z7r h4 {
+  text-align: left;
+  font-weight: 500;
+}
+.cid-roLwph3Z7r p {
   color: #767676;
+  text-align: left;
 }
-.cid-rm9MoUs9N8 {
-  padding-top: 60px;
-  padding-bottom: 60px;
-  background-color: #ffffff;
+.cid-roLwph3Z7r .aside-content {
+  flex-basis: 100%;
+  -webkit-flex-basis: 100%;
 }
-.cid-rm9MoUs9N8 .counter-container {
-  color: #767676;
+.cid-roLwph3Z7r .block-content {
+  display: -webkit-flex;
+  flex-direction: column;
+  -webkit-flex-direction: column;
+  word-break: break-word;
 }
-.cid-rm9MoUs9N8 .counter-container ol {
-  margin-bottom: 0;
-  counter-reset: myCounter;
+.cid-roLwph3Z7r .media {
+  margin: initial;
+  align-items: center;
+  -webkit-align-items: center;
 }
-.cid-rm9MoUs9N8 .counter-container ol li {
-  margin-bottom: 1rem;
+.cid-roLwph3Z7r .mbr-figure {
+  align-self: flex-start;
+  -webkit-align-self: flex-start;
+  -webkit-flex-shrink: 0;
+  flex-shrink: 0;
 }
-.cid-rm9MoUs9N8 .counter-container ol li {
-  list-style: none;
-  padding-left: .5rem;
+.cid-roLwph3Z7r .card-img {
+  padding-right: 2rem;
+  width: auto;
 }
-.cid-rm9MoUs9N8 .counter-container ol li:before {
-  position: absolute;
-  left: 0px;
-  margin-top: -10px;
-  counter-increment: myCounter;
-  content: counter(myCounter);
-  display: inline-block;
-  text-align: center;
-  margin: 5px 10px;
-  line-height: 40px;
-  transition: all .2s;
-  color: #ffffff;
-  background: #149dcc;
-  width: 40px;
-  height: 40px;
-  border-radius: 50%;
-}
-.cid-rm9MpHHi2u {
-  padding-top: 60px;
-  padding-bottom: 60px;
-  background-color: #ffffff;
-}
-.cid-rm9MpHHi2u .counter-container {
-  color: #767676;
-}
-.cid-rm9MpHHi2u .counter-container ul {
-  margin-bottom: 0;
-}
-.cid-rm9MpHHi2u .counter-container ul li {
-  margin-bottom: 1rem;
-  list-style: none;
-}
-.cid-rm9MpHHi2u .counter-container ul li:before {
-  position: absolute;
-  left: 0px;
-  margin-top: -10px;
-  padding-top: 3px;
-  content: '';
-  display: inline-block;
-  text-align: center;
-  margin: 5px 10px;
-  line-height: 20px;
-  transition: all .2s;
-  color: #ffffff;
-  background: #149dcc;
-  width: 25px;
-  height: 25px;
-  border-radius: 50%;
-  content: '✓';
-}
-.cid-rm9MrgeEml {
-  padding-top: 60px;
-  padding-bottom: 60px;
-  background-color: #ffffff;
+.cid-roLwph3Z7r .card-img span {
+  font-size: 72px;
+  color: #707070;
 }
 @media (min-width: 992px) {
-  .cid-rm9MrgeEml .mbr-figure {
+  .cid-roLwph3Z7r .mbr-figure {
     padding-right: 4rem;
   }
 }
 @media (max-width: 991px) {
-  .cid-rm9MrgeEml .mbr-figure {
+  .cid-roLwph3Z7r .mbr-figure {
+    padding-right: 0;
     padding-bottom: 1rem;
+    margin-bottom: 2rem;
   }
 }
-.cid-rm9MrgeEml .mbr-text {
+@media (max-width: 300px) {
+  .cid-roLwph3Z7r .card-img span {
+    font-size: 40px !important;
+  }
+}
+.cid-roLJ7nQI4Y {
+  padding-top: 90px;
+  padding-bottom: 90px;
+  background-color: #ffffff;
+}
+.cid-roLJ7nQI4Y h2 {
+  text-align: left;
+}
+.cid-roLJ7nQI4Y h4 {
+  text-align: left;
+  font-weight: 500;
+}
+.cid-roLJ7nQI4Y p {
   color: #767676;
+  text-align: left;
+}
+.cid-roLJ7nQI4Y .aside-content {
+  flex-basis: 100%;
+  -webkit-flex-basis: 100%;
+}
+.cid-roLJ7nQI4Y .block-content {
+  display: -webkit-flex;
+  flex-direction: column;
+  -webkit-flex-direction: column;
+  word-break: break-word;
+}
+.cid-roLJ7nQI4Y .media {
+  margin: initial;
+  align-items: center;
+  -webkit-align-items: center;
+}
+.cid-roLJ7nQI4Y .mbr-figure {
+  align-self: flex-start;
+  -webkit-align-self: flex-start;
+  -webkit-flex-shrink: 0;
+  flex-shrink: 0;
+}
+.cid-roLJ7nQI4Y .card-img {
+  padding-right: 2rem;
+  width: auto;
+}
+.cid-roLJ7nQI4Y .card-img span {
+  font-size: 72px;
+  color: #707070;
+}
+@media (min-width: 992px) {
+  .cid-roLJ7nQI4Y .mbr-figure {
+    padding-right: 4rem;
+  }
+}
+@media (max-width: 991px) {
+  .cid-roLJ7nQI4Y .mbr-figure {
+    padding-right: 0;
+    padding-bottom: 1rem;
+    margin-bottom: 2rem;
+  }
+}
+@media (max-width: 300px) {
+  .cid-roLJ7nQI4Y .card-img span {
+    font-size: 40px !important;
+  }
 }
 .cid-rm9Ms427sQ {
   padding-top: 60px;
