create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -2489,8 +2489,8 @@ body {
   text-align: left;
 }
 .cid-roLrvTFzot {
-  padding-top: 30px;
-  padding-bottom: 30px;
+  padding-top: 15px;
+  padding-bottom: 15px;
   background-color: #ffffff;
 }
 .cid-roLrvTFzot .line {
@@ -2524,8 +2524,8 @@ body {
   color: #767676;
 }
 .cid-rm9MkNWqXw {
-  padding-top: 30px;
-  padding-bottom: 30px;
+  padding-top: 15px;
+  padding-bottom: 15px;
   background-color: #ffffff;
 }
 .cid-rm9MkNWqXw .line {
@@ -2550,8 +2550,8 @@ body {
   text-align: left;
 }
 .cid-rm9MUw0riy {
-  padding-top: 90px;
-  padding-bottom: 90px;
+  padding-top: 15px;
+  padding-bottom: 15px;
   background-color: #f9f9f9;
 }
 .cid-rm9MUw0riy .mbr-section-subtitle {
@@ -2637,9 +2637,9 @@ body {
   text-align: center;
 }
 .cid-rm9MmwVoLS {
-  padding-top: 30px;
-  padding-bottom: 30px;
-  background-color: #2e2e2e;
+  padding-top: 15px;
+  padding-bottom: 15px;
+  background-color: #879a9f;
 }
 .cid-rm9MmwVoLS .line {
   background-color: #ffffff;
@@ -2660,8 +2660,8 @@ body {
   }
 }
 .cid-rm9MlR1EA1 {
-  padding-top: 60px;
-  padding-bottom: 60px;
+  padding-top: 15px;
+  padding-bottom: 15px;
   background-color: #ffffff;
 }
 .cid-rm9MlR1EA1 .mbr-text,
@@ -2734,9 +2734,12 @@ body {
     font-size: 40px !important;
   }
 }
+.cid-roLwph3Z7r .mbr-text {
+  color: #060606;
+}
 .cid-roLJ7nQI4Y {
-  padding-top: 90px;
-  padding-bottom: 90px;
+  padding-top: 15px;
+  padding-bottom: 15px;
   background-color: #ffffff;
 }
 .cid-roLJ7nQI4Y h2 {
