--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -5197,119 +5197,73 @@ body {
     width: 100% !important;
   }
 }
-.cid-roLwph3Z7r {
+.cid-roOmJFAOQo {
   padding-top: 15px;
   padding-bottom: 15px;
   background-color: #ffffff;
 }
-.cid-roLwph3Z7r h2 {
-  text-align: left;
-}
-.cid-roLwph3Z7r h4 {
-  text-align: left;
-  font-weight: 500;
-}
-.cid-roLwph3Z7r p {
-  color: #767676;
-  text-align: left;
-}
-.cid-roLwph3Z7r .aside-content {
-  flex-basis: 100%;
-  -webkit-flex-basis: 100%;
-}
-.cid-roLwph3Z7r .block-content {
-  display: -webkit-flex;
-  flex-direction: column;
-  -webkit-flex-direction: column;
-  word-break: break-word;
-}
-.cid-roLwph3Z7r .media {
-  margin: initial;
-  align-items: center;
-  -webkit-align-items: center;
-}
-.cid-roLwph3Z7r .mbr-figure {
-  align-self: flex-start;
-  -webkit-align-self: flex-start;
-  -webkit-flex-shrink: 0;
-  flex-shrink: 0;
-}
-.cid-roLwph3Z7r .card-img {
-  padding-right: 2rem;
-  width: auto;
-}
-.cid-roLwph3Z7r .card-img span {
-  font-size: 72px;
-  color: #707070;
-}
-@media (min-width: 992px) {
-  .cid-roLwph3Z7r .mbr-figure {
-    padding-right: 4rem;
-  }
-}
-@media (max-width: 991px) {
-  .cid-roLwph3Z7r .mbr-figure {
-    padding-right: 0;
-    padding-bottom: 1rem;
-    margin-bottom: 2rem;
-  }
-}
-@media (max-width: 300px) {
-  .cid-roLwph3Z7r .card-img span {
-    font-size: 40px !important;
-  }
-}
-.cid-roLwph3Z7r .mbr-text {
-  color: #060606;
-}
-.cid-roMMS896yn {
-  padding-top: 15px;
-  padding-bottom: 15px;
-  background: #ffffff;
-}
-.cid-roMMS896yn .images-container.container-fluid {
-  padding: 0;
-}
-.cid-roMMS896yn .media-container-row {
+.cid-roOmJFAOQo .line {
+  background-color: #149dcc;
+  color: #149dcc;
+  align: center;
+  height: 2px;
   margin: 0 auto;
-  align-items: stretch;
-  -webkit-align-items: stretch;
 }
-.cid-roMMS896yn .media-container-row .img-item {
-  display: -webkit-flex;
-  flex-direction: column;
-  justify-content: center;
-  position: relative;
-  width: 100%;
-  z-index: 1;
-  -webkit-flex-direction: column;
-  -webkit-justify-content: center;
+.cid-roOmJFAOQo .section-text {
+  padding: 2rem 0;
+  text-align: left;
 }
-.cid-roMMS896yn .media-container-row .img-item img {
-  width: 100%;
-  min-height: 1px;
+.cid-roOmJFAOQo .inner-container {
+  margin: 0 auto;
 }
-.cid-roMMS896yn .media-container-row .img-item .img-caption {
-  background: #ffffff;
-  z-index: 2;
-  padding: 1rem 1rem;
-  word-break: break-word;
-}
-.cid-roMMS896yn .media-container-row .img-item .img-caption p {
-  margin-bottom: 0;
-}
-.cid-roMMS896yn .media-container-row .img-item.item1 {
-  padding: 0 2rem 0 0;
-}
-@media (max-width: 992px) {
-  .cid-roMMS896yn .img-item {
+@media (max-width: 768px) {
+  .cid-roOmJFAOQo .inner-container {
     width: 100% !important;
   }
-  .cid-roMMS896yn .img-item.item1 {
-    width: 100%;
-    flex-basis: initial !important;
-    padding: 0 0 2rem 0 !important;
-    -webkit-flex-basis: initial !important;
+}
+.cid-roOe0cpl3C {
+  background: #ffffff;
+  padding-top: 15px;
+  padding-bottom: 15px;
+}
+.cid-roOe0cpl3C .image-block {
+  margin: auto;
+}
+.cid-roOe0cpl3C figcaption {
+  position: relative;
+}
+.cid-roOe0cpl3C figcaption div {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+}
+@media (max-width: 768px) {
+  .cid-roOe0cpl3C .image-block {
+    width: 100% !important;
+  }
+}
+.cid-roOq8ngpAd {
+  padding-top: 15px;
+  padding-bottom: 15px;
+  background-color: #ffffff;
+}
+.cid-roOq8ngpAd .line {
+  background-color: #149dcc;
+  color: #149dcc;
+  align: center;
+  height: 2px;
+  margin: 0 auto;
+}
+.cid-roOq8ngpAd .section-text {
+  padding: 2rem 0;
+  text-align: left;
+}
+.cid-roOq8ngpAd .inner-container {
+  margin: 0 auto;
+}
+@media (max-width: 768px) {
+  .cid-roOq8ngpAd .inner-container {
+    width: 100% !important;
   }
 }
 .cid-roMOyHl9AD {
@@ -5321,8 +5275,8 @@ body {
   color: #767676;
 }
 .cid-roMJTyy444 {
-  padding-top: 15px;
-  padding-bottom: 15px;
+  padding-top: 0px;
+  padding-bottom: 0px;
   background-color: #ffffff;
 }
 .cid-roMJTyy444 .mbr-slider .carousel-control {
